# physlink

./: .gitignore  .pre-commit-config.yaml  404.html  BACKEND_BOUNDARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPERIMENT_CARD.md  LICENSE  PRODUCT_THESIS.md  README.md  ROADMAP.md  hooks.py  index.html  mkdocs.yml  objects.inv  project-scan-report.json  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  domain_extension.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
_bmad/: config.toml  config.user.toml
_bmad-output/_progress/: 00-design-log.md  validation-report.md
_bmad-output/deliveries/: DD-001-handoff-log.md  DD-001-hugos-friday-afternoon-test.yaml  DD-002-handoff-log.md  DD-002-petras-lab-standard-rollout.yaml  DD-003-handoff-log.md  (+1 more)
api/: index.html
architecture/: index.html
changelog/: index.html
contribution-guide/: index.html
deployment-guide/: index.html
development-guide/: index.html
docs/: architecture.md  changelog.md  contribution-guide.md  deployment-guide.md  development-guide.md  domain-scientists.md  getting-started.md  index.md  lab-adoption-guide.md  source-tree-analysis.md
domain-scientists/: index.html
examples/: check_trajectory_quality.py  trajectory_quality_report.json  wmel_integration.py
getting-started/: index.html
lab-adoption-guide/: index.html
landing/: index.html
notebooks/: domain-scientist-colab.ipynb  quickstart.ipynb
search/: search_index.json
source-tree-analysis/: index.html
stylesheets/: vercel.css
tests/: conftest.py
(+186 files in other folders)
